--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -73,5 +73,8 @@
   "video_screen": "Video Screen",
   "task_pro_validity" : "Task Pro Validity",
   "current" : "Current",
-  "last_validity" : "Last Validity"
+  "last_validity" : "Last Validity",
+  "delete_account" : "Delete Account",
+  "delete" : "Delete",
+  "are_you_sure_delete_acc" : "Are you sure you want to delete account?"
 }
